samples/_failures_safe/1761623573_bfc8b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61dce5c8.c: In function ‘main’:
./samples/SAFE/__tmp_61dce5c8.c:161:9: error: expected declaration or statement at end of input
  161 |         char command = input_buffer[0];
      |         ^~~~
./samples/SAFE/__tmp_61dce5c8.c:161:9: error: expected declaration or statement at end of input
